...
              keyboardType="number-pad"
              containerStyle={{ marginBottom: 16 }}
            />

            <InputField
              label={t('addSale.salePrice')}
              placeholder="0.00"
              value={salePrice}
              onChangeText={setSalePrice}
              error={errors.salePrice}
              keyboardType="decimal-pad"
              helperText={t('addSale.pricePerItem')}
              containerStyle={{ marginBottom: 16 }}
...
